--- a/styles.css
+++ b/styles.css
@@ -19,18 +19,18 @@ html{
 }
 
 .dark-mode--theme .navigation{
-    background:#181A20;
+    background:#434e6e;
 }
 
 .dark-mode--theme .navigation__mega-menu{
-    background:#1E2329;
+    background:#2e3a47;
 }
 .dark-mode--theme .navigation__mega-menu--item:hover{
-    background:#2B3139;
+    background:#1d406e;
 }
 
 .dark-mode--theme .theme--text{
-    color:rgb(234, 236, 239);
+    color:rgb(191, 197, 208);
 }
 
 .dark-mode--theme .theme--text-light{
@@ -72,7 +72,7 @@ html{
 }
 
 .dark-mode--theme .daily-rewards__content--card:hover .daily-rewards__content--card__footer--trailing{
-    background:rgb(252, 213, 53);
+    background:rgb(207, 173, 34);
 }
 
 .dark-mode--theme .daily-rewards__content--card .daily-rewards__content--card__footer--trailing{
@@ -108,7 +108,7 @@ html{
 }
 
 .dark-mode--theme .header__main--content__auth-btn--btn{
-    background:#474D57;
+    background:#5c677a;
     color:#EAECEF;
 }
 
@@ -153,7 +153,7 @@ html{
     color:rgb(3, 166, 109);
 }
 .red--text-color{
-    color:rgb(207, 48, 74);
+    color:rgb(180, 31, 56);
 }
 
 /* Font families */
